[package]
name = "krt2"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.dev]
#panic = "abort"

#[profile.release]
#panic = "abort"

[dependencies]
riscv = "0.10.1"
riscv-rt = "0.11.0"
#panic-halt = "0.2.0"
uart_16550 = "0.2.18"
spin = "0.9.4"
fdt = "0.1.4"
#linked_list_allocator = "0.10.4"
#virtio-drivers = { version = "0.3.0", default_features = true }

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]